--- a/proj_underwater_image_synthesis.html
+++ b/proj_underwater_image_synthesis.html
@@ -45,7 +45,7 @@
 </p>
 
 <div style="text-align: center; display: block; margin-right: auto;">
-<img src="sub_img/Benchmark_samples.png" border="0" ="300" width="700"><br></div><br>
+<img src="sub_img/samples.png" height="770" width="700"><br></div><br>
 
 
 <hr />
@@ -54,7 +54,7 @@
 <p>
   Chongyi Li and Saeed Anwar
   <br><strong>Underwater scene prior inspired deep underwater image and video enhancement</strong>. 
-  <a href="https://www.sciencedirect.com/science/article/pii/S0031320319303401"><font color="#ff0000"></font></a><br>
+  <a href="https://www.sciencedirect.com/science/article/pii/S0031320319303401"><font color="#ff0000">[official version]</font></a><br>
 </p>
 
 <hr />
@@ -62,24 +62,25 @@
     
 <p>
 <div style="text-align: center; display: block; margin-right: auto;">
-<img src="sub_img/samples.png" height="270" width="700"><br></div><br>
+<img src="sub_img/PR-results.png" height="770" width="700"><br></div><br>
 </p>
  
 <hr />
-<h4>10 types of synthesized underwater image datasets: </h4>
+<h4>10 Types of Synthesized Underwater Image Datasets: </h4>
 <p>
-To synthesize underwater image degradation datasets, we use the attenuation coefficients described in Table 1 for the different water types of oceanic and coastal classes (i.e., I, IA, IB, II, and III for open ocean waters, and 1, 3, 5, 7, and 9 for coastal waters). Type-I is the clearest and Type-III is the most turbid open ocean water. Similarly, for coastal waters, Type-1 is the clearest and Type-9 is the most turbid. We apply Eqs (1) and (2) (please check the paper) to build ten types of underwater image datasets using the RGB-D NYU-v2 indoor dataset which consists of 1449 images. To improve the quality of datasets, we crop the original size (480*640) of NYU-v2 to 460*620.   This dataset is for non-commercial use only. <ud2>Please enjoy the ten types of underwater image datasets (each dataset is about 1.2G).</ud2>
+To synthesize underwater image degradation datasets, we use the attenuation coefficients described in Table 1 for the different water types of oceanic and coastal classes (i.e., I, IA, IB, II, and III for open ocean waters, and 1, 3, 5, 7, and 9 for coastal waters). Type-I is the clearest and Type-III is the most turbid open ocean water. Similarly, for coastal waters, Type-1 is the clearest and Type-9 is the most turbid. We apply Eqs (1) and (2) (please check the paper) to build ten types of underwater image datasets by using the RGB-D NYU-v2 indoor dataset which consists of 1449 images. To improve the quality of datasets, we crop the original size (480*640) of NYU-v2 to 460*620.   
+<br>This dataset is for non-commercial use only. <ud2>Enjoy the ten types of underwater image datasets (each dataset is about 1.2G).</ud2><br>
 
-<br><a <font color="#ff111">[Type-I]</font> href="https://pan.baidu.com/s/13k3qNGG93aFwdthjRtxi3Q" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-IA]</font> href="https://pan.baidu.com/s/13lRAbZYyYLyb-Z8qcpW-4Q" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-IB]</font> href="https://pan.baidu.com/s/12qXACo20C6ee9bViItZAFA" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-II]</font> href="https://pan.baidu.com/s/1iZM9md_mdeHXqw3XchvKHg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-III]</font> href="https://pan.baidu.com/s/1fIKVcvU6jg5Mi0Sw-k8VmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-1]</font> href="https://pan.baidu.com/s/1V10iXd9QnFbevm17Ua0jwQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-3]</font> href="https://pan.baidu.com/s/1DEI4T700jmU-cUYgAxRQAw" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-5]</font> href="https://pan.baidu.com/s/1jlPodNRPqySGnFxr7-qRRg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-7]</font> href="https://pan.baidu.com/s/12l0gCsPYOtEx7hCvp9C-fw" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a <font color="#ff111">[Type-9]</font> href="https://pan.baidu.com/s/1IPKimxXA1CsX3wjRE4VYNQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-I]</font></a> <a href="https://pan.baidu.com/s/13k3qNGG93aFwdthjRtxi3Q" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-IA]</font></a> <a href="https://pan.baidu.com/s/13lRAbZYyYLyb-Z8qcpW-4Q" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-IB]</font></a> <a href="https://pan.baidu.com/s/12qXACo20C6ee9bViItZAFA" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-II]</font></a> <a href="https://pan.baidu.com/s/1iZM9md_mdeHXqw3XchvKHg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-III]</font></a> <a href="https://pan.baidu.com/s/1fIKVcvU6jg5Mi0Sw-k8VmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-1]</font></a> <a href="https://pan.baidu.com/s/1V10iXd9QnFbevm17Ua0jwQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-3]</font></a> <a href="https://pan.baidu.com/s/1DEI4T700jmU-cUYgAxRQAw" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-5]</font></a> <a href="https://pan.baidu.com/s/1jlPodNRPqySGnFxr7-qRRg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-7]</font></a> <a href="https://pan.baidu.com/s/12l0gCsPYOtEx7hCvp9C-fw" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a <font color="#ff111">[Type-9]</font></a> <a href="https://pan.baidu.com/s/1IPKimxXA1CsX3wjRE4VYNQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
 <br>If you use these datasets, please cite the related papers. Thanks.<br>
 <br>C. Li and S. Anwar, “Underwater scene prior inspired deep underwater image and video enhancement,” Pattern Recognition, vol. 98, no. 12, pp.1-11, 2019.</li><br>  
 <br>N. Silberman, D. Hoiem, and P. Fergus, “Indoor segmentation and support inference from rgbd images,” ECCV, pp.746-760, 2012.</li><br> 
