--- a/proj_underwater_image_synthesis.html
+++ b/proj_underwater_image_synthesis.html
@@ -45,7 +45,7 @@
 </p>
 
 <div style="text-align: center; display: block; margin-right: auto;">
-<img src="sub_img/samples.png" height="770" width="700"><br></div><br>
+<img src="sub_img/samples.png" height="700" width="700"><br></div><br>
 
 
 <hr />
@@ -82,7 +82,7 @@ To synthesize underwater image degradation datasets, we use the attenuation coef
 <br><a <font color="#ff111">[Type-7]</font></a> <a href="https://pan.baidu.com/s/12l0gCsPYOtEx7hCvp9C-fw" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
 <br><a <font color="#ff111">[Type-9]</font></a> <a href="https://pan.baidu.com/s/1IPKimxXA1CsX3wjRE4VYNQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
 <br>If you use these datasets, please cite the related papers. Thanks.<br>
-<br>C. Li and S. Anwar, “Underwater scene prior inspired deep underwater image and video enhancement,” Pattern Recognition, vol. 98, no. 12, pp.1-11, 2019.</li><br>  
+<br>C. Li and S. Anwar, “Underwater scene prior inspired deep underwater image and video enhancement,” Pattern Recognition, vol. 98, pp.1-11, 2019.</li><br>  
 <br>N. Silberman, D. Hoiem, and P. Fergus, “Indoor segmentation and support inference from rgbd images,” ECCV, pp.746-760, 2012.</li><br> 
 </p> 
 <hr />
