--- a/proj_underwater_image_synthesis.html
+++ b/proj_underwater_image_synthesis.html
@@ -54,7 +54,7 @@
 <p>
   Chongyi Li, Saeed Anwar, and Fatih Porikli
   <br><strong>Underwater scene prior inspired deep underwater image and video enhancement</strong>. 
-  <a href="https://www.sciencedirect.com/science/article/pii/S0031320319303401"><font color="#ff0000">[official version]</font></a><br>
+  <a href="https://www.sciencedirect.com/science/article/pii/S0031320319303401" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a> <a href="https://arxiv.org/abs/1807.03528" target="_blank"><font color="#1C86EE">[PDF--Arxiv version]</font></a> <br>
 </p>
 
 <hr />
