--- a/proj_underwater_image_synthesis.html
+++ b/proj_underwater_image_synthesis.html
@@ -87,7 +87,8 @@ To synthesize underwater image degradation datasets, we use the attenuation coef
 </p> 
 <hr />
 
-
+<li>Here, you can find a real-world underwater image dataset. <a href="https://li-chongyi.github.io/proj_benchmark.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
+<p> If you use this code, please cite the related paper. Thanks.</p>
 
 <div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3230663&c=9692302" alt="AmazingCounters.com"></a></div>
 
