--- a/proj_underwater_image_synthesis.html
+++ b/proj_underwater_image_synthesis.html
@@ -90,6 +90,19 @@ To synthesize underwater image degradation datasets, we use the attenuation coef
 <li>Here, you can find a real-world underwater image dataset. <a href="https://li-chongyi.github.io/proj_benchmark.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
 <p> If you use this code, please cite the related paper. Thanks.</p>
 
+<hr />
+<h4>Testing code for UWCNNs: </h4>
+<p>
+<br><a <font color="#ff111">[Code]</font></a> <a href="https://pan.baidu.com/s/1tbEGjkghWkILHu8dI7hsNQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br>Check readme for how to run this code.</li><br>    
+</p> 
+<hr />  
+  
+  
+  
+  
+  
+  
 <div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3230663&c=9692302" alt="AmazingCounters.com"></a></div>
 
       </section>
