--- a/proj_underwater_image_synthesis.html
+++ b/proj_underwater_image_synthesis.html
@@ -93,8 +93,7 @@ To synthesize underwater image degradation datasets, we use the attenuation coef
 <hr />
 <h4>Testing code for UWCNNs: </h4>
 <p>
-<br><a <font color="#ff111">[Code]</font></a> <a href="https://pan.baidu.com/s/1tbEGjkghWkILHu8dI7hsNQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br>Check readme for how to run this code.</li><br>    
+<br><a <font color="#ff111">[Code]</font></a> <a href="https://github.com/saeed-anwar/UWCNN" target="_blank"><font color="#ff0000">[GitHub]</font></a><br>
 </p> 
 <hr />  
   
