--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li><strong>Chongyi Li</strong>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao, <ud2>An Underwater Image Enhancement Benchmark Dataset and Beyond</ud2> is accepted by <strong>IEEE Transactions on Image Processing</strong>.</li> 
 <li>We released our PR 2019 Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement (Datasets and Code). Have fun! <a href="https://li-chongyi.github.io/proj_underwater_image_synthesis.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
 <p> If you use this code, please cite the related paper. Thanks.</p>
 <li> <strong>Chongyi Li</strong>, Saeed Anwar, and Fatih Porikli, <ud2>Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</ud2> is accepted by <strong>Pattern Recognition</strong>. We will release the codes soon.</li> 
