--- a/sub_publication.html
+++ b/sub_publication.html
@@ -55,6 +55,8 @@
 <li> <strong>Chongyi Li</strong>, Runmin Cong, Junhui Hou, et al., Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images, <strong><ud2>IEEE Transaction on Geoscience and Remote Sensing</ud2></strong> (SCI, IF=4.662), 2019. <a href="https://ieeexplore.ieee.org/document/8793227" target="_blank"><font color="#1C86EE">[PDF]</font></a> <a href="https://li-chongyi.github.io/proj_optical_saliency.html" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
 <li> Miao Yang, Jintong Hu, <strong>Chongyi Li</strong>, et al., An In-depth Survey of Underwater Image Enhancement and Restoration, <strong><ud2>IEEE ACCESS</ud2></strong> (SCI,IF.3.244), 2019. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8786104" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> Bo Wang and <strong>Chongyi Li</strong>, A visual hierarchical framework based model for underwater image enhancement, <strong><ud2>Frontiers of Computer Science</ud2></strong> (SCI, IF=1.105), 2019.  <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/A%20visual%20hierarchical%20framework%20based%20model%20for%20underwater.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>  
+<li> Xiangyuan Gu, Jichang Guo, Lijun Xiao, Tao Ming, and <strong>Chongyi Li</strong>, A feature selection algorithm based on equal interval division and minimal-redundancy–maximal-relevance, <strong><ud2>Neural Processing Letters</ud2></strong> (SCI, IF=2.591), 2019.  <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/A%20visual%20hierarchical%20framework%20based%20model%20for%20underwater.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>  
+
 </ol>  
   
 <h4>
