--- a/proj_benchmark.html
+++ b/proj_benchmark.html
@@ -54,7 +54,8 @@
 <p>
   Chongyi Li, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao
   <br><strong>An Underwater Image Enhancement Benchmark Dataset and Beyond</strong>. 
-  <a href="https://arxiv.org/pdf/1901.05495.pdf"><font color="#ff0000">[arXiv]</font></a><br>
+  <a href="https://arxiv.org/pdf/1901.05495.pdf"><font color="#ff0000">[arXiv]</font></a>
+  <a href="https://ieeexplore.ieee.org/document/8917818"><font color="#ff0000">[TIP]</font></a><br><br>
 </p>
 
 <hr />
@@ -66,12 +67,14 @@
 </p>
  
 <hr />
-<h4>UIEBD Dataset: </h4>
+<h4>UIEB Dataset: </h4>
 <p>
- UIEBD includes two subsets: 890 raw underwater images with corresponding high-quality reference images; 60 challenging underwater images. Please share your results on this dataset with us. We will periodically update the results for noticeable underwater image enhancement methods. The UIEBD dataset is for non-commercial use only. <ud2>Please enjoy the 890 raw underwater images(~630MB).</ud2>
+ UIEB includes two subsets: 890 raw underwater images with corresponding high-quality reference images; 60 challenging underwater images. Please share your results on this dataset with us. We will periodically update the results for noticeable underwater image enhancement methods. The UIEBD dataset is for non-commercial use only. <ud2>Please enjoy the 890 raw underwater images(~630MB) and the corresponding reference images (~786MB).</ud2>
 
 <br><a href="https://drive.google.com/open?id=12W_kkblc2Vryb9zHQ6BfGQ_NKUfXYk13" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
 <a href="https://pan.baidu.com/s/1Oi-If64WV6C98LFC-w0blw" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
+<br><a href="https://drive.google.com/open?id=1cA-8CzajnVEL4feBRKdBxjEe6hwql6Z7" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
+<a href="https://pan.baidu.com/s/1eCUD_yvDxzwXgfm_C7oiJg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
 <br>If you need the corresponding reference images and challenging underwater images, please email us and cite the related papers. Thanks.<br>
 
 <li>We also released our PR 2019 Synthetic Underwater Image Datasets. Have fun! <a href="https://li-chongyi.github.io/proj_underwater_image_synthesis.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
@@ -83,7 +86,7 @@
 
 
 
-<h4>DUIENet Code:</h4>    
+<h4>Water-Net Code:</h4>    
 <p>
 <a href="https://github.com/Li-Chongyi/DUIENet_Code" target="_blank"><font color="#ff0000">[TensorFlow Code]</font></a><br>
 </p>  
