--- a/proj_benchmark.html
+++ b/proj_benchmark.html
@@ -40,8 +40,13 @@
 <h4>
 <a id="Introduction-page" class="anchor" href="#Introduction-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Abstract:</h4>
 <div style="text-align: justify; display: block; margin-right: auto;">
-<p>Underwater image enhancement has been attracting much attention due to its significance in marine engineering and aquatic robot. Numerous underwater image enhancement algorithms have been proposed in the last few years. However, these algorithms are mainly evaluated using either synthetic datasets or few selected real-world images. It is thus unclear how these algorithms would perform on images acquired in the wild and how we could gauge the progress in the field. To bridge this gap, we present the first comprehensive perceptual study and analysis of underwater image enhancement using largescale real-world degraded images. In this paper, we construct an Underwater Image Enhancement Benchmark Dataset (UIEBD) including 950 real-world underwater images, 890 of which have the corresponding reference images. We treat the rest 60 underwater images which cannot obtain satisfactory references as challenging data. Using this dataset, we conduct a comprehensive study of the state-of-the-art underwater image enhancement algorithms qualitatively and quantitatively. In addition, we propose an end-to-end Deep Underwater Image Enhancement Network (DUIENet) trained on this benchmark as a baseline, which indicates the generalization of the proposed UIEBD for training Convolutional Neural Networks (CNNs). The benchmark evaluations and the proposed DUIENet demonstrate the performance and limitations of state-of-the-art algorithms which shed light on the future research in underwater image enhancement.
-
+<p>Underwater image enhancement has been attracting much attention due to its significance in marine engineering and aquatic robotics.
+Numerous underwater image enhancement algorithms have been proposed in the last few years. However, these algorithms are mainly evaluated using either synthetic datasets or few selected real-world images. It is thus unclear how these algorithms would perform on images acquired in the wild and how we could gauge the progress in the field.
+To bridge this gap, we present the first comprehensive perceptual study and analysis of underwater image enhancement using large-scale real-world images.
+In this paper, we construct an Underwater Image Enhancement Benchmark (UIEB) including 950 real-world underwater images, 890 of which have the corresponding reference images. We treat the rest 60 underwater images which cannot obtain satisfactory reference images as challenging data.
+Using this dataset, we conduct a comprehensive study of the state-of-the-art underwater image enhancement algorithms qualitatively and quantitatively.
+In addition, we propose an underwater image enhancement network (called Water-Net) trained on this benchmark as a baseline, which indicates the generalization of the proposed UIEB for training Convolutional Neural Networks (CNNs).
+The benchmark evaluations and the proposed Water-Net demonstrate the performance and limitations of state-of-the-art algorithms, which shed light on future research in underwater image enhancement.
 </p>
 
 <div style="text-align: center; display: block; margin-right: auto;">
@@ -71,9 +76,9 @@
 <p>
  UIEB includes two subsets: 890 raw underwater images with corresponding high-quality reference images; 60 challenging underwater images. Please share your results on this dataset with us. We will periodically update the results for noticeable underwater image enhancement methods. The UIEBD dataset is for non-commercial use only. <ud2>Please enjoy the 890 raw underwater images(~630MB) and the corresponding reference images (~786MB).</ud2>
 
-<br><a href="https://drive.google.com/open?id=12W_kkblc2Vryb9zHQ6BfGQ_NKUfXYk13" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
+<br>[Raws]<a href="https://drive.google.com/open?id=12W_kkblc2Vryb9zHQ6BfGQ_NKUfXYk13" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
 <a href="https://pan.baidu.com/s/1Oi-If64WV6C98LFC-w0blw" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><a href="https://drive.google.com/open?id=1cA-8CzajnVEL4feBRKdBxjEe6hwql6Z7" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
+<br>[References]<a href="https://drive.google.com/open?id=1cA-8CzajnVEL4feBRKdBxjEe6hwql6Z7" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
 <a href="https://pan.baidu.com/s/1eCUD_yvDxzwXgfm_C7oiJg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
 <br>If you need the corresponding reference images and challenging underwater images, please email us and cite the related papers. Thanks.<br>
 
