--- a/proj_benchmark.html
+++ b/proj_benchmark.html
@@ -80,10 +80,10 @@ The benchmark evaluations and the proposed Water-Net demonstrate the performance
 <a href="https://pan.baidu.com/s/1Oi-If64WV6C98LFC-w0blw" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
 <br>[References]<a href="https://drive.google.com/open?id=1cA-8CzajnVEL4feBRKdBxjEe6hwql6Z7" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
 <a href="https://pan.baidu.com/s/1eCUD_yvDxzwXgfm_C7oiJg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br>If you need the corresponding reference images and challenging underwater images, please email us and cite the related papers. Thanks.<br>
+<br>If you need this dataset, please email us and cite the related papers. Thanks.<br>
 
 <li>We also released our PR 2019 Synthetic Underwater Image Datasets. Have fun! <a href="https://li-chongyi.github.io/proj_underwater_image_synthesis.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
-<p> If you use this code, please cite the related paper. Thanks.</p>
+<p> If you use this dataset, please cite the related paper. Thanks.</p>
         
 </p> 
 <hr />
