--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 <li>Elsevier Pattern Recognition Letters</li>
 <li>Elsevier Signal Processing: Image Communication</li>
 <li>Elsevier Journal of Computers & Graphics</li>
+<li>Springer The Visual Computer</li>
 <li>Springer SCIENCE CHINA Information Sciences</li>
 <li>Springer Machine Vision and Applications</li>
 <li>Springer EURASIP Journal on Image and Video Processing</li> 
