--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>Hi！I am <strong>Chongyi Li (李重仪)</strong>. I received my Ph.D. degree from School of Electrical and Information Engineering, Tianjin University, Tianjin, China. 
   I conducted the Ph.D. research as a Visiting Student with Research School of Engineering, Australian National University, Canberra, Australia. I was advised by Prof. 
-  <a href="http://www.tju.edu.cn/seea/szdw/xxx/201709/t20170902_298201.htm"><font color="#1C86EE">Jichang Guo</font></a> in TJU and Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">Fatih Porikli</font></a> (IEEE Fellow) in ANU. Now, I am a postdoctoral fellow with Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong. I work with Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow) in CityU, Hong Kong.<br>
+  <a href="http://www.tju.edu.cn/seea/szdw/xxx/201709/t20170902_298201.htm"><font color="#1C86EE">Jichang Guo</font></a> in TJU and Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">
+  Fatih Porikli</font></a> (IEEE Fellow) in ANU. From 10/2018 to 01/2020, I was a postdoctoral fellow with Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong. I worked with Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow) and <a href="https://sites.google.com/site/junhuihoushomepage/"><font color="#1C86EE">Dr. Hou</font></a>  in CityU, Hong Kong.<br>
 <hr />
 </p>
 <h2>
@@ -157,6 +158,7 @@
 <li>International Journal of Electrical and Computer Engineering</li>
 <li>24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018</li>
 <li>27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member)</li>
+<li>IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020</li>
 </ul>
 <br>
 <hr />    
