--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 <li>Springer SCIENCE CHINA Information Sciences</li>
 <li>Springer Machine Vision and Applications</li>
 <li>Springer EURASIP Journal on Image and Video Processing</li> 
+<li>ACM Computing Surveys</li>
 <li>IET Computer Vision</li>
 <li>SPIE Journal of Electronic Imaging</li>
 <li>International Journal of Electrical and Computer Engineering</li>
