--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li><strong>Underwater Image Enhancement: Challenges, Benchmarks, and Solutions</strong>. Invited Talk, Center of Digital Media Information Processing, Beijing Jiaotong University. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/BeijiaoPoster.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
 <li>We released the dataset and testing model of our TIP 2019 <ud2>An Underwater Image Enhancement Benchmark Dataset and Beyond</ud2>. Have fun! <a href="https://li-chongyi.github.io/proj_benchmark.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
 <p> If you use this dataseet or code, please cite the related paper. Thanks.</p>
 <li><strong>Chongyi Li</strong>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao, <ud2>An Underwater Image Enhancement Benchmark Dataset and Beyond</ud2> is accepted by <strong>IEEE Transactions on Image Processing</strong>. <a href="https://li-chongyi.github.io/proj_benchmark.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
@@ -138,7 +139,8 @@
 <ul>
 <li>IEEE Transactions on Image Processing</li>
 <li>IEEE Transactions on Cybernetics</li>
- <li>IEEE Transactions on Broadcasting</li>
+<li>IEEE Transactions on Circuits and Systems for Video Technology</li>  
+<li>IEEE Transactions on Broadcasting</li>
 <li>IEEE Transactions on Instrumentation and Measurement</li>
 <li>IEEE Transactions on Circuits and Systems II: Express Briefs</li>  
 <li>IEEE ACCESS</li>
