--- a/sub_publication.html
+++ b/sub_publication.html
@@ -41,7 +41,6 @@
 <li> Saeed Anwar <strong>Chongyi Li</strong>, Fatih Porikli, Deep underwater image enhancement, in <strong><ud2>arXiv: 1807.03528</ud2></strong>, 2018.  <a href="https://arxiv.org/pdf/1807.03528.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> <strong>Chongyi Li</strong>, Jichang Guo, Fatih porikli, et al., DR-Net: Transmission steered single image dehazing network with weakly supervised refinement,  in <strong><ud2>arXiv: 1712.00621</ud2> </strong>, 2017. <a href="https://arxiv.org/abs/1712.00621" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>  
 -->  
-<li> <strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, et al., ASIF-Net: Attention steered interweave fusion network for RGB-D salient object detection, <strong><ud2>IEEE Transactions on Cybernetics (TCyb)</ud2></strong> </li> 
 <li> <strong>Chongyi Li</strong>, Saeed Anwar, Junhui Hou, et al., Underwater image enhancement via depth attention-guided multi-color space embedding, <strong><ud2> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</ud2></strong>  </li>   
 <li> Wenqi Ren <strong>Chongyi Li</strong>, Lin Ma, et al., Multi-scale gated fusion network for single image dehazing and beyond, <strong><ud2> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</ud2></strong> (co-first author) </li>
 <li> Chunle Guo, <strong>Chongyi Li</strong>, Jichang Guo, et al., Zero-reference deep curve estimation for low-light image enhancement, <strong><ud2> Top Conference</ud2></strong>  (co-first author) </li>   
@@ -50,7 +49,15 @@
  
 
 </ol>   
+  
+<h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020:</h4>
 
+<ol>
+<li> <strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, et al., ASIF-Net: Attention steered interweave fusion network for RGB-D salient object detection, <strong><ud2>IEEE Transactions on Cybernetics </ud2></strong> (SCI, IF=10.387), 2020.</li> 
+
+</ol>    
+  
 <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2019:</h4>
 
