--- a/sub_publication.html
+++ b/sub_publication.html
@@ -44,6 +44,7 @@
 <li> <strong>Chongyi Li</strong>, Saeed Anwar, Junhui Hou, et al., Underwater image enhancement via depth attention-guided multi-color space embedding, <strong><ud2> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</ud2></strong>  </li>   
 <li> Wenqi Ren <strong>Chongyi Li</strong>, Lin Ma, et al., Multi-scale gated fusion network for single image dehazing and beyond, <strong><ud2> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</ud2></strong> (co-first author) </li>
 <li> Chunle Guo, <strong>Chongyi Li</strong>, Jichang Guo, et al., Zero-reference deep curve estimation for low-light image enhancement, <strong><ud2> Top Conference</ud2></strong>  (co-first author) </li>   
+<li> Runmin Cong, <strong>Chongyi Li</strong>, et al., Multi-Modality Soft-to-Hard Attention Network for RGB-D Saliency Detection, <strong><ud2> Top Conference</ud2></strong>  (co-first and corresponding author) </li>   
 <li> Saeed Anwar and <strong>Chongyi Li</strong>, Diving Deeper into Underwater Image Enhancement: A Survey, <strong><ud2> IJCV</ud2></strong> <a href="https://arxiv.org/pdf/1907.07863.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> (co-first author) </li>
 <li> Miao Yang, Hu Ke, <strong>Chongyi Li</strong>, et al., UW-Net: An inception-attention network for underwater image classification, <strong><ud2> IEEE Transactions on Image Processing (TIP)</ud2></strong>  </li>   
  
