--- a/Zero-DCE.html
+++ b/Zero-DCE.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0044)https://nbei.github.io/video-inpainting.html -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Delving Deep into Hybrid Annotations for 3D Human Recovery in the Wild</title>
+<title>Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</title>
 
 <!-- Meta tags for search engines to crawl -->
 <meta name="robots" content="index,follow">
@@ -36,7 +36,7 @@
     <div id="content-inner">
       
       <div class="section head">
-	<h2>Delving Deep into Hybrid Annotations for 3D Human Recovery in the Wild</h2>
+	<h2>Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</h2>
 
 	<div class="authors">
 	  <a href="https://penincillin.github.io/">Yu Rong<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
