--- a/Zero-DCE.html
+++ b/Zero-DCE.html
@@ -57,15 +57,14 @@
     <div id="content-inner">
       <div class="section head">
         <h1>
-          <font color="Tomato">EDVR</font>: <font color="Tomato">V</font>ideo <font color="Tomato">R</font>estoration
-          with <font color="Tomato">E</font>nhanced <font color="Tomato">D</font>eformable
+         Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement
         </h1>
         <h1>Convolutional Networks</h1>
         <!--=================Authors==========================-->
         <div class="authors">
-          <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a> <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
-          Kelvin C.K. Chan <sup>2</sup> &nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="https://yuke93.github.io/" target="_blank">Ke Yu</a> <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          Chunle Guo<sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="hhttps://li-chongyi.github.io/" target="_blank"Chongyi Li</a> <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          Jichang Guo<sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
           <a href=" https://scholar.google.com.hk/citations?user=OSDCB0UAAAAJ" target="_blank">Chao Dong</a>
           <sup>3</sup> &nbsp;&nbsp;&nbsp;&nbsp;
           <a href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Chen Change Loy</a> <sup>2</sup>
