--- a/Zero-DCE.html
+++ b/Zero-DCE.html
@@ -59,22 +59,22 @@
         <h1>
          Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement
         </h1>
-        <h1>Convolutional Networks</h1>
         <!--=================Authors==========================-->
         <div class="authors">
           Chunle Guo<sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="hhttps://li-chongyi.github.io/" target="_blank"Chongyi Li</a> <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://li-chongyi.github.io/" target="_blank>"Chongyi Li</a> <sup>2</sup> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           Jichang Guo<sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
-          <a href=" https://scholar.google.com.hk/citations?user=OSDCB0UAAAAJ" target="_blank">Chao Dong</a>
-          <sup>3</sup> &nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Chen Change Loy</a> <sup>2</sup>
+          <a href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Chen Change Loy</a> <sup>3</sup>
+          <a href="https://sites.google.com/site/junhuihoushomepage/" target="_blank">Junhui Hou</a> <sup>2</sup>
+          <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html/" target="_blank">Sam Kwong</a> <sup>2</sup>
+          <a href="https://rmcong.github.io//" target="_blank">Runmin Cong</a> <sup>4</sup>
         </div>
 
         <div class="affiliations ">
-          <sup>1</sup> <a href="http://mmlab.ie.cuhk.edu.hk/" target="_blank">CUHK - SenseTime Joint Lab, The Chinese
-            University of Hong Kong</a> <br>
-          <sup>2</sup> Nanyang Technological University, Singapore<br>
-          <sup>3</sup> SIAT-SenseTime Joint Lab, Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences
+          <sup>1</sup> Tianjin University, Tianjin, China
+          <sup>2</sup> City University of Hong Kong, Hong Kong SAR, China
+          <sup>3</sup> Nanyang Technological University, Singapore
+          <sup>4</sup> Beijing Jiaotong University, Beijing, China<br>
         </div>
         <!--=================Tabs==========================-->
         <ul id="tabs">
