--- a/Zero.html
+++ b/Zero.html
@@ -2,11 +2,11 @@
 <!-- saved from url=(0048)https://xinntao.github.io/projects/EDVR#citation -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
-  <title>EDVR: Video Restoration with Enhanced Deformable Convolutional Networks</title>
+  <title>Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</title>
   <!--=================Meta tags==========================-->
   <meta name="robots" content="index,follow">
-  <meta name="description" content="Video restoration tasks, including super-resolution, deblurring, etc, are drawing increasing attention in the computer vision community. A challenging benchmark named REDS is released in the NTIRE19 Challenge. This new benchmark challenges existing methods from two aspects: (1) how to align multiple frames given large motions, and (2) how to effectively fuse different frames with diverse motion and blur. In this work, we propose a novel Video Restoration framework with Enhanced Deformable networks, termed EDVR, to address these challenges. First, to handle large motions, we devise a Pyramid, Cascading and Deformable (PCD) alignment module, in which frame alignment is done at the feature level using deformable convolutions in a coarse-to-fine manner. Second, we propose a Temporal and Spatial Attention (TSA) fusion module, in which attention is applied both temporally and spatially, so as to emphasize important features for subsequent restoration. Thanks to these modules, our EDVR wins the champions and outperforms the second place by a large margin in all four tracks in the NTIRE19 video restoration and enhancement challenges. EDVR also demonstrates superior performance to state-of-the-art published methods on video super-resolution and deblurring. The code is available at https://github.com/xinntao/EDVR.">
-  <meta name="keywords" content="video, super resolution, deblurring, denoise, video restoration, deformable, pyramid, attention, EDVR">
+  <meta name="description" content="Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement.">
+  <meta name="keywords" content="Zero-Reference">
   <link rel="author" href="https://xinntao.github.io/projects/EDVR">
   <!--=================js==========================-->
   <link href="./EDVR_ Video Restoration with Enhanced Deformable Convolutional Networks_files/css.css" rel="stylesheet" type="text/css">
@@ -135,10 +135,8 @@
     <div id="content-inner">
       <div class="section head">
         <h1>
-          <font color="Tomato">EDVR</font>: <font color="Tomato">V</font>ideo <font color="Tomato">R</font>estoration
-          with <font color="Tomato">E</font>nhanced <font color="Tomato">D</font>eformable
+          <font color="Tomato">Z</font>ero-Reference <font color="Tomato">D</font>eep <font color="Tomato">C</font>Urve <font color="Tomato">E</font>stimation for Low-light Image Enhancement
         </h1>
-        <h1>Convolutional Networks</h1>
         <!--=================Authors==========================-->
         <div class="authors">
           <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a> <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
