--- a/Zero.html
+++ b/Zero.html
@@ -135,7 +135,7 @@
     <div id="content-inner">
       <div class="section head">
         <h1>
-          <font color="Tomato">Z</font>ero-Reference <font color="Tomato">D</font>eep <font color="Tomato">C</font>Urve <font color="Tomato">E</font>stimation for Low-light Image Enhancement
+          Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement
         </h1>
         <!--=================Authors==========================-->
         <div class="authors">
