--- a/Zero.html
+++ b/Zero.html
@@ -135,23 +135,25 @@
     <div id="content-inner">
       <div class="section head">
         <h1>
-          Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement
+          Zero-Reference Deep Curve Estimation (Zero-DCE)
         </h1>
+        <h1>for Low-Light Image Enhancement</h1>
         <!--=================Authors==========================-->
         <div class="authors">
-          <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a> <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
-          Kelvin C.K. Chan <sup>2</sup> &nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="https://yuke93.github.io/" target="_blank">Ke Yu</a> <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="https://scholar.google.com.hk/citations?user=OSDCB0UAAAAJ" target="_blank">Chao Dong</a>
-          <sup>3</sup> &nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Chen Change Loy</a> <sup>2</sup>
+          Chunle Guo <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://yuke93.github.io/" target="_blank">Chongyi Li</a> <sup>2</sup> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          Jichang Guo <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Chen Change Loy</a> <sup>3</sup>
+          <a href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Junhui Hou</a> <sup>2</sup>
+          <a href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Sam Kwong</a> <sup>2</sup>
+          <a href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Runmin Cong</a> <sup>4</sup>
         </div>
 
         <div class="affiliations ">
-          <sup>1</sup> <a href="http://mmlab.ie.cuhk.edu.hk/" target="_blank">CUHK - SenseTime Joint Lab, The Chinese
-            University of Hong Kong</a> <br>
+          <sup>1</sup> Tianjin University, Tianjin, China <br>
+          <sup>2</sup> City University of Hong Kong, Hong Kong<br>
           <sup>2</sup> Nanyang Technological University, Singapore<br>
-          <sup>3</sup> SIAT-SenseTime Joint Lab, Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences
+          <sup>3</sup> Beijing Jiaotong University, Beijing, China
         </div>
         <!--=================Tabs==========================-->
         <ul id="tabs">
